# roadmapsh-weatherapi

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  render.yaml  requirements.txt
api/: main.py
templates/: index.html
